# linux_audio_capture

./: CMakeLists.txt  README.md
example/: main.cpp
src/: audio_capture.cpp  audio_capture.h  audio_info.h  audio_utils.cpp  audio_utils.h  opus_encoder.cpp  opus_encoder.h
